fix: layout on mobile

--- a/themes/cozy-garden/assets/css/main.css
+++ b/themes/cozy-garden/assets/css/main.css
@@ -46,9 +46,9 @@
   --side-toc-slide-bg-clr: #e3e3e3;
   --side-toc-slide-fg-clr: #183e22;
   --max-width-main: 75ch;
-  --tweet-img-bg-clr: #fbf9f3; 
-  --tweet-bg-clr: #ffffff; 
-  --tweet-fade-text-clr: rgba(0,0,0, 0.6); 
+  --tweet-img-bg-clr: #fbf9f3;
+  --tweet-bg-clr: #ffffff;
+  --tweet-fade-text-clr: rgba(0, 0, 0, 0.6);
   interpolate-size: allow-keywords;
 }
 
@@ -79,9 +79,9 @@
   --side-toc-bg-clr: #255e42;
   --side-toc-slide-bg-clr: #505050;
   --side-toc-slide-fg-clr: #81ffa2;
-  --tweet-img-bg-clr: #fff; 
-  --tweet-bg-clr: #afafaf; 
-  --tweet-fade-text-clr: rgba(0,0,0, 0.6); 
+  --tweet-img-bg-clr: #fff;
+  --tweet-bg-clr: #afafaf;
+  --tweet-fade-text-clr: rgba(0, 0, 0, 0.6);
 }
 
 /* ----------- RESET --------------- */
@@ -623,7 +623,7 @@ footer p {
   margin-bottom: 4em;
 }
 
-.footer__nav > ul {
+.footer__nav>ul {
   margin: 0;
   padding: 0;
 }
@@ -661,6 +661,26 @@ footer p {
   flex-direction: row;
   justify-items: center;
   gap: 5px;
+}
+
+
+@media only screen and (max-width: 450px) {
+  .footer__row {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 1em;
+    margin-bottom: 2em;
+  }
+  .footer__nav {
+    align-items: center;
+  }
+  .footer__nav-item {
+    text-align: center;
+  }
+  .footer__nav-header {
+    text-align: center;
+  }
 }
 
 /*
@@ -1129,29 +1149,35 @@ footer p {
   background-color: var(--tweet-img-bg-clr);
   padding: 5px;
 }
+
 .tweet__header {
   display: flex;
   flex-direction: row;
   gap: 1em;
 }
+
 .tweet__info {
   display: flex;
   flex-direction: column;
   gap: 0;
 }
+
 .tweet__name {
   font-weight: 600;
 }
+
 .tweet__username {
   font-weight: 300;
   color: var(--tweet-fade-text-clr);
   font-size: 0.95rem;
 }
+
 .tweet__datetime {
   margin-top: 1em;
   color: var(--tweet-fade-text-clr);
   font-size: 0.95rem;
 }
+
 .tweet__content {
   font-size: 1.1rem;
 }
